0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset:

.. _examples-nddataset-index:

How to use NDDataset
--------------------

This section contains examples of how to use the NDDataset class.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="NDDataset creation and plotting example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/thumb/sphx_glr_plot_a_create_dataset_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NDDataset creation and plotting example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we show how coordinates can be used in SpectroChemPy">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/thumb/sphx_glr_plot_b_coordinates_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_b_coordinates.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NDDataset coordinates example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we show how units can be used in SpectroChemPy">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/thumb/sphx_glr_plot_c_units_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Units manipulation examples</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_a_create_dataset
   /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_b_coordinates
   /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_c_units

